<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ContentFrameStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lessonOne_name" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lessonOne_name_hint"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lessonOne_caliber" />

        <EditText
            android:id="@+id/editCaliber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lessonOne_editCaliber_hint"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/editArmorPiercing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessonOne_armorPiercing" />

        <!-- poor man's spacer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text=""/>

        <Button
            android:id="@+id/sendRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/send_request" />

    </LinearLayout>

</ScrollView>
